--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="images/my_image.jpg" alt="my image" /></td>
+        <td><img src="my_image.jpg" alt="my image" /></td>
         <td>
           <h1>Devendar Sainadh Gorla</h1>
           <p>
